# VulkanAndroidRendererDraft

./: .gitignore  LICENSE  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/renderer/: GeometryGenerator.cpp  GeometryGenerator.hpp  Log.hpp  Math.hpp  Mesh.cpp  Mesh.hpp  PaniniProjection.cpp  PaniniProjection.hpp  Vertex.hpp  VulkanDepthBuffer.cpp  VulkanDepthBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
app/src/main/res/values/: strings.xml
app/src/main/shaders/: base.vert
